# rich-vocabulary

./: Cargo.toml  LICENSE  README.md
crates/dictionary/: Cargo.toml
crates/dictionary/src/: dictionary.rs  dictionary_api.rs  lib.rs  random_word_api.rs
rich-vocabulary/: Cargo.toml
rich-vocabulary/migrations/: 20240201130614_init.up.sql
rich-vocabulary/src/: main.rs  questions.rs  storage.rs  utilities.rs
