[package]
name = "rich-vocabulary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
dictionary = { path = "../crates/dictionary" }
futures = "0.3.30"
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros"] }
strsim = "0.11.0"
tokio = { version = "1.35.1", features = ["full"] }
